Use BASIC! 01.92 reborn for compilation

--- a/assets/rfo-compiler/data/Basic-01.92/res/layout/about.xml
+++ b/assets/rfo-compiler/data/Basic-01.92/res/layout/about.xml
@@ -61,10 +61,10 @@ This file is part of BASIC! for Android
 			android:typeface="serif" />
 
 		<Button
-			android:id="@+id/about_btn_home"
+			android:id="@+id/about_btn_manual"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="@string/about_text_btn_home"
+			android:text="@string/about_text_btn_manual"
 			android:textAllCaps="false" />
 
 		<Button
@@ -79,6 +79,13 @@ This file is part of BASIC! for Android
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:text="@string/about_text_btn_programs"
+			android:textAllCaps="false" />
+
+		<Button
+			android:id="@+id/about_btn_wiki"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="@string/about_text_btn_wiki"
 			android:textAllCaps="false" />
 
 		<Button
